# crebain

./: .env.example  .gitattributes  .gitignore  .ncp-consumer  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-APACHE  README.md  SECURITY.md  brand.md  bun.nix  flake.nix  package.json  review.html  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: audit.yml  benchmarks.yml  ci.yml  codeql.yml  nix.yml  release.yml  ros-ci.yml  scorecard.yml
.superstack/security-reports/: crebain-2026-07-10.md  history.json
.windsurf/workflows/: manual-smoke-test.md
audit/: README.md
audit/candidate/: README.md  TASK_DISPOSITION.csv  TWENTY_LENS_REVIEW.md
audit/frozen/: FILE_REVIEW_LEDGER.csv  INPUT_MANIFEST.json  REVIEW_REPORT.md  TRACKED_FILE_MANIFEST.json  review-map.json
docs/: ARCHITECTURE.md  BACKLOG.md  COMPLETION_LEVELS.md  CONFIGURATION.md  CONTROLS.md  CROSS_REPOSITORY_REQUIREMENTS_0.9.0.md  FUSION_VALIDATION_PROTOCOL.md  GALADRIEL_PRODUCER.md  HAZARD_LOG.md  L1_ODD.md  MANUAL_SMOKE_TEST.md  MODEL_CONTRACTS.md  NARROWED_GO_0.9.0.md  NATIVE_DETECTOR_BENCHMARK.md  NCP_BRIDGE_HANDOFF.md  PHASE0_BASELINE.md  PLANT_APPLY_OBSERVATION_V1.md  PLANT_CONTRACT_V1.md  PLANT_FRESHNESS_V1.md  PLANT_HEALTH_V1.md  PLANT_SAFE_ACTION_V1.md  PLANT_WATCHDOG_V1.md  RELEASE_ACCEPTANCE.md  RELEASE_EVIDENCE.md  RELEASE_HISTORY.md  SENSOR_FUSION.md  SYSTEM_CONTEXT.md
docs/archive/: SENSOR_FUSION_AGENT_SPECS.md
docs/baselines/: ecosystem-baseline.json  ipc-contract-registry.json  phase0-command-surfaces.json  phase0-hazards.json  plant-frame-conventions-v1.json  plant-frame-golden-v1.tsv  product-profiles-0.9.0.json
public/models/: README.md
ros/: CMakeLists.txt  README.md  package.xml
ros/launch/: multi_drone.launch  rosbridge.launch  simulation.launch
ros/msg/: DroneTarget.msg  InterceptionCommand.msg  LidarDetection.msg  LidarDetectionArray.msg
ros/srv/: InitiateIntercept.srv
scripts/: audit-tracked-files.py  check-bundle-size.mjs  check-ncp-coherence.sh  check-plant-authority-boundary.mjs  check-production-authority-boundary.mjs  check-version-coherence.sh  generate-ipc-contract-registry.mjs  generate-release-evidence-manifest.py  generate-task-disposition.py  inventory-handoff.py  normalize-bun-nix.mjs  perf-smoke.mjs  test-audit-tracked-files.py  test-check-bundle-size.mjs  test-evidence-manifest.py  test-ipc-contract-registry.mjs  test-normalize-bun-nix.mjs  test-phase0-baseline.mjs  test-plant-frame-conventions.mjs  test-product-profiles.mjs  test-production-authority-boundary.mjs  test-production-vendor-boundary.mjs  test-vendor-compat.py  test-version-coherence.sh  verify-evidence-manifest.py  verify-phase0-baseline.mjs  verify-plant-frame-conventions.mjs  verify-product-profiles.mjs  verify-vendor-compat.py
src/: App.tsx
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/crates/plant-authority/: Cargo.toml  README.md
src-tauri/crates/plant-authority/src/: adapter.rs  apply_observation.rs  channels.rs  contract.rs  deadline_monitor.rs  expiry.rs  frame_conventions.rs  freshness.rs  health.rs  lib.rs  lifecycle.rs  main.rs  runtime.rs  safe_action.rs
src-tauri/crates/plant-authority/tests/: channel_stress.rs  frame_golden_vectors.rs  headless.rs  lifecycle_properties.rs
(+193 files in other folders)
