<?xml version="1.0"?>
<package format="3">
  <name>crebain_msgs</name>
  <version>0.4.0</version>
  <description>
    CREBAIN ROS1-style reference message, service, and launch definitions for
    adaptive spatial defense. Provides custom detection messages, interception
    services, and multi-drone simulation launch files with MAVROS integration.
  </description>

  <maintainer email="info@crebain.dev">CREBAIN Contributors</maintainer>
  <license>MIT OR Apache-2.0</license>

  <author>CREBAIN Contributors</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>mavlink</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
